# city-runners

./: README.md
.github/workflows/: actions.yml  build_app.yml
api/: .gitignore  Cargo.toml  Shuttle.toml  config.json
api/dbschema/: default.esdl
api/dbschema/migrations/: 00001-m1kziev.edgeql  00002-m12e3rc.edgeql  00003-m1im7yp.edgeql  00004-m13r7rz.edgeql  00005-m1kutfp.edgeql
api/src/: auth.rs  config.rs  db.rs  game.rs  graph.rs  location.rs  logging.rs  main.rs  messages.rs  models.rs  mtr.rs  player.rs  router.rs  socket.rs  state_machine.rs  states.rs  station.rs  teams.rs  timer.rs  websocket.rs
app/: components.json  index.html  package.json  pnpm-lock.yaml  pubspec.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/lib/: globals.dart  login.dart  main.dart  map.dart  server.dart  teams.dart
app/src/: App.vue  event-bus.ts  main.ts  store.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: game.rs  lib.rs  login.rs  main.rs  socket.rs  teams.rs
app/src/components/: Chat.vue  Game.vue  Lobby.vue  Login.vue  LoginForm.vue  Map.vue  TeamForm.vue
app/src/components/ui/button/: index.ts
util/: MTRDATA.csv  connections.ron  graph.rs  mtr_lines_and_stations.csv  scraper.py  stations.ron
web/: package.json  pnpm-lock.yaml
web/src/: main.js
web/src/lib/: index.ts  ws.ts
web/src/routes/: +page.svelte
workflows/: actions.yml
