[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "json"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
cookie = "0.18.1"
diesel = "2.1.6"
edgedb-derive = "0.5.2"
edgedb-protocol = "0.6.1"
edgedb-tokio = "0.5.1"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink", "std"] }
headers = "0.4.0"
jsonwebtoken = "9.3.0"
petgraph = { version = "0.6.5", features = ["serde", "serde_derive"] }
ron = "0.8.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = { version = "1.37.0", features = ["full", "sync", "time"] }
tokio-tungstenite = "0.21.0"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
