[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.5", features = ["ws", "json"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
edgedb-protocol = "0.6.1"
edgedb-tokio = "0.5.1"
futures = "0.3.30"
headers = "0.4.0"
jsonwebtoken = "9.3.0"
ron = "0.8.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = { version = "1.37.0", features = ["full", "sync", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
